fix email align in order detail

--- a/src/styles/order-detail-page.less
+++ b/src/styles/order-detail-page.less
@@ -70,6 +70,11 @@
           text-transform: uppercase;
         }
       }
+      div:nth-child(3) {        
+        h5 {
+          margin-top: 8px;
+        }
+      }
       div:last-child {
         margin-left: auto;
         align-self: center;
